src/objects/QLMS_AE__c.object
<CustomObject>
    <fields>
        <fullName>Common_ID__c</fullName>
        <label>Common ID</label>
        <length>16</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Office_Phone__c</fullName>
        <label>Office Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Please uncheck this checkbox if this AE cannot be tagged to any of the ORMS Partners</inlineHelpText>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <description>This object is specifically to store the information of the QLMS AEs so that they can be assigned to each Partner in the system</description>
    <label>QLMS AE</label>
    <nameField>
        <label>QLMS AE Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QLMS AEs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All_QLMS_AEs</fullName>
        <columns>NAME</columns>
        <columns>Common_ID__c</columns>
        <columns>Email__c</columns>
        <columns>isActive__c</columns>
        <columns>Office_Phone__c</columns>
        <filterScope>Everything</filterScope>
        <label>All QLMS AEs</label>
    </listViews>
</CustomObject>